[package]
edition = "2021"
name = "genfellow-rust-lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
url = "2.2"
rayon = "1.5"
scraper = "0.20.0"
regex = "1.11.0"
futures = "0.3.31"
log = "0.4.22"
env_logger = "0.11.5"
fastembed = "4.1.0"
headless_chrome = "1.0.15"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
